Clean up code and add support for custom base URLs.